# gemini

./: .gitignore  CMakeLists.txt  README.md  com.gemini.desktop  gemini.desktop
gemini/: CMakeLists.txt  main.cpp
gemini/audio/: audiofile.cpp  audiofile.h
gemini/common/: deleters.h  enums.h  utility.cpp  utility.h
gemini/controllers/: databasecontroller.cpp  databasecontroller.h  datacontroller.cpp  datacontroller.h  filescontroller.cpp  filescontroller.h  modelcontroller.cpp  modelcontroller.h  objectcontroller.cpp  objectcontroller.h  sessioncontroller.cpp  sessioncontroller.h
gemini/data/: pageitem.h  playlistdata.h  songdata.h
gemini/database/: databasecore.cpp  databasecore.h  databasetables.h
gemini/helpers/: pathhelper.h
gemini/models/: pendingmodel.cpp  pendingmodel.h  playlistmodel.cpp  playlistmodel.h  relationmodel.cpp  relationmodel.h  songmodel.cpp  songmodel.h  sqltablemodel.cpp  sqltablemodel.h  wallpapermodel.cpp  wallpapermodel.h
gemini/models/proxy/: readmodel.cpp  readmodel.h  songsinrelations.cpp  songsinrelations.h
gemini/paths/: paths.cpp  paths.h
gemini/processes/: pendableprocess.cpp  pendableprocess.h  process.cpp  process.h  processexecutor.cpp  processexecutor.h
gemini/processes/insert/: pendinginsertprocess.cpp  pendinginsertprocess.h  playlistinsertprocess.cpp  playlistinsertprocess.h  relationinsertprocess.cpp  relationinsertprocess.h  resumeunfinishedpendingprocess.cpp  resumeunfinishedpendingprocess.h  songinsertprocess.cpp  songinsertprocess.h  wallpaperinsertprocess.cpp  wallpaperinsertprocess.h
gemini/processes/remove/: pendingremoveprocess.cpp  pendingremoveprocess.h  playlistremoveprocess.cpp  playlistremoveprocess.h  relationremoveprocess.cpp  relationremoveprocess.h  removemissingdataprocess.cpp  removemissingdataprocess.h  songremoveprocess.cpp  songremoveprocess.h  wallpaperremoveprocess.cpp  wallpaperremoveprocess.h
gemini/qml/: GeminiStyles.qml  main.qml  qml.qrc
gemini/qml/components/: Controls.qml  Dashboard.qml  DialogHeader.qml  Highlight.qml  Icon.qml  Label.qml  Shortcuts.qml  SongInfo.qml  SongsCheck.qml  TileText.qml
gemini/qml/components/audio/: AudioControl.qml  AudioProgressbar.qml  AudioTime.qml
gemini/qml/components/currentplaylist/: CurrentPlaylistComponent.qml  CurrentPlaylistNew.qml  CurrentPlaylistSong.qml  CurrentPlaylistSongs.qml  CurrentPlaylistSwitcher.qml  CurrentPlaylistSwitcherCurrentItem.qml  CurrentPlaylistSwitcherItem.qml  CurrentPlaylistSwitcherItems.qml  CurrentPlaylistView.qml
gemini/qml/components/dynamic/: Changer.qml
gemini/qml/components/pageheaders/: PlaylistPageHeader.qml  WallpaperPageHeader.qml
gemini/qml/components/pending/: PendingItem.qml  PendingProcess.qml  PendingView.qml  UnfinishedPendingItem.qml  UnfinishedPendingItems.qml  UnfinishedPendingView.qml
gemini/qml/components/playlist/: PlaylistInfo.qml  PlaylistItem.qml  PlaylistItems.qml  PlaylistLabel.qml  PlaylistSong.qml  PlaylistSongs.qml  PlaylistSongsView.qml  PlaylistView.qml
gemini/qml/components/separator/: LineSeparator.qml
gemini/qml/components/summary/: SummaryHeader.qml  SummaryHelpButton.qml  SummaryItem.qml  SummaryItems.qml  (+5 more)
gemini/qml/dialogs/: ConfirmDialog.qml  FileOpenDialog.qml  GBaseDialog.qml  GDialog.qml  HelpDialog.qml  NewPlaylistDialog.qml  PendingDialog.qml  SongsDialog.qml  SwitchDialog.qml  UnfinishedPendingDialog.qml  WallpaperDialog.qml  WallpaperIntervalDialog.qml
gemini/qml/helper/: Helper.qml
gemini/qml/items/: GBusyIndicator.qml  GButton.qml  GCheckBox.qml  GComboBox.qml  GImageButton.qml  GInput.qml  GInputButton.qml  GScrollBar.qml  GSlider.qml  GSpinBox.qml  GSplitView.qml  GText.qml  GToolBar.qml  GToolButton.qml  GToolTip.qml
gemini/qml/pages/: GPage.qml  GWallpaperPage.qml  MusicPage.qml  PlaylistPage.qml  SummaryPage.qml  WallpaperPage.qml
gemini/resources/: resources.qrc
gemini/tools/: circleprogressbar.cpp  circleprogressbar.h  picker.cpp  picker.h  player.cpp  player.h  playlist.cpp  playlist.h  stringfilterproxymodel.cpp  stringfilterproxymodel.h
gemini/vlc/: vlccore.cpp  vlccore.h  vlcmedia.cpp  vlcmedia.h  vlcmeta.cpp  vlcmeta.h  vlcmusic.cpp  vlcmusic.h  vlcplayer.cpp  vlcplayer.h
tests/: CMakeLists.txt  testingresources.qrc  tests.pro  tst_gemini.cpp  tst_pathhelper.cpp
tests/quicktest_circleprogressbar/: CMakeLists.txt  quicktest_circleprogressbar.cpp  quicktest_circleprogressbar.pro  tst_circleprogressbarquicktest.qml
tests/quicktest_picker/: CMakeLists.txt  quicktest_picker.cpp  quicktest_picker.pro  tst_pickertest.qml
tests/quicktest_playlist/: CMakeLists.txt  quicktest_playlist.cpp  quicktest_playlist.pro  tst_playlistquicktest.qml
tests/quicktest_sessioncontroller/: CMakeLists.txt  quicktest_sessioncontroller.cpp  quicktest_sessioncontroller.pro  tst_sessioncontrollertest.qml
tests/quicktest_stringfilterproxymodel/: CMakeLists.txt  quicktest_stringfilterproxymodelquicktest.cpp  tst_stringfilterproxymodelquicktest .qml
tests/test_audiofile/: CMakeLists.txt  tst_audiofiletest.cpp
tests/test_database/: CMakeLists.txt  test_database.pro  tst_databasetest.cpp
tests/test_datacontroller/: CMakeLists.txt  test_datacontroller.pro  tst_datacontrollertest.cpp
tests/test_filecontroller/: CMakeLists.txt  test_filecontroller.pro  tst_filecontrollertest.cpp
tests/test_modelcontroller/: CMakeLists.txt  tst_modelcontrollertest.cpp
tests/test_models/: CMakeLists.txt  test_models.pro  tst_modelstest.cpp
tests/test_objectcontroller/: CMakeLists.txt  test_objectcontroller.pro  tst_objectcontrollertest.cpp
tests/test_pathhelper/: CMakeLists.txt  test_pathhelper.pro  tst_pathhelpertest.cpp
tests/test_paths/: CMakeLists.txt  tst_pathstest.cpp
tests/test_processes/: CMakeLists.txt  test_processes.pro  tst_processestest.cpp
tests/test_sessioncontroller/: CMakeLists.txt  test_sessioncontroller.pro  tst_sessioncontrollertest.cpp
tests/test_utility/: CMakeLists.txt  test_utility.pro  tst_utilitytest.cpp
tests/test_vlcmedia/: CMakeLists.txt  tst_vlcmediatest.cpp
tests/testresources/: testresources.cpp  testresources.qrc
(+20 files in other folders)
